@@ -42,8 +42,9 @@ protocol server
 [\fB\-edebug\fP] [\fB\-h\fP] [\fB\-I\fP\fIinitid\fP] [\fB\-l\fP]
 [\fB\-k\fP] [\fB\-n\fP] [\fB\-r\fP\fIlowpty-highpty\fP] [\fB\-s\fP]
 [\fB\-S\fP \fItos\fP] [\fB\-U\fP] [\fB\-X\fP \fIauthtype\fP]
+[\fB\-u\fImaxhostlen\fP] [\fB\-i\fP] [\fB\-N\fP]
 [\fB\-debug\fP [\fIport\fP]]
-.Sh DESCRIPTION
+.SH DESCRIPTION
 The
 .B telnetd
 command is a server which supports the
@@ -196,6 +197,9 @@ to use when init starts login sessions.  The default
 .SM ID
 is fe.
 .TP
+.B \-i
+Cuases the IP address to be unconditionally passed to login(8).
+.TP
 .B \-k
 This option is only useful if
 .B telnetd
@@ -226,6 +230,9 @@ Specifies line mode.  Tries to force clients to use line-at-a-time
 mode.  If the
 .SM LINEMODE
 option is not supported, it will go into kludge linemode.
+.TP
+.B \-N
+Don't strip the local domain name for passing to login(1).
 .TP
 .B \-n
 Disable
@@ -285,6 +292,10 @@ to refuse connections from addresses that cannot be mapped back into a
 symbolic name via the
 .IR gethostbyaddr (3)
 routine.
+.TP
+.B \-u
+.I maxhostlen
+Sets the maximum hostname length passed to login(1).
 .TP
 \fB\-X\fP \fIauthtype\fP
 This option is only valid if
